# EBeamSim

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_STRUCTURE_REVIEW.md  COMPREHENSIVE_CODE_REVIEW.md  GUI_CLARIFICATION.md  GUI_INTEGRATION_COMPLETE.md  GUI_REORGANIZATION_PLAN.md  GUI_TAB_MOCKUPS.md  GUI_WORKFLOW_FIXES.md  PATTERN_EXPOSURE_DOCUMENTATION.md  PHYSICS_AND_COMMAND_FIXES_SUMMARY.md  PHYSICS_REVIEW_FINDINGS.md  QUICK_FIX_PATTERN_CRASH.md  README.md  SIMULATION_WORKFLOW_EXPLANATION.md  build_pattern.bat  cleanup_project.py  create_ebl_project.ps1  create_gui_structure.ps1  create_widget_files.ps1  fix_geant4_runtime_error.ps1  fix_summary.txt  gui_generated.mac  install_ebl_gui.ps1  quick_fix_parens.ps1  run_simple_test.py  run_with_env.bat  simple_pattern_test.mac  structure.txt  test_cleanup.py  test_pattern_gui.py  update.ps1  update_ebl_gui_path.ps1  update_includes.ps1  update_source_files.ps1  update_summary.txt  verify_pattern_basics.mac  verify_pattern_integration.py
.claude/: settings.local.json
apps/ebl_sim/: CMakeLists.txt  main.cc
cmake/: CompilerSettings.cmake  EBLSimulationConfig.cmake.in  EBeamSim.cmake.in  EBeamSimConfig.cmake.in
config/materials/: alucone.json
docs/: PATTERN_SCANNING.md  PATTERN_SCANNING_IMPLEMENTATION.md  PROXIMITY_EFFECT_VISUALIZATION.md  PROXIMITY_WORKFLOW_GUIDE.md
macros/benchmarks/: comprehensive_physics_validation.mac  performance.mac  testingperf.mac
macros/patterns/: multi_pattern_template.mac
macros/runs/: compare_proximity_correction.mac  init_vis.mac  pattern_demo.mac  run.mac  scan_energy.mac  test.mac  test_pattern.mac  test_pattern_dose.mac  test_proximity_pattern.mac
scripts/analysis/: proximity_effect_analyzer.py
scripts/gui/: PlotEnergy.py  README.md  beamer_converter.py  debug_pattern_simulation.py  ebl_gui.py  ebl_gui.py.backup  ebl_gui.py.bak  ebl_gui_main.py  ebl_gui_simple.py  ebl_sim_log_20250609_230439.txt  fix_pattern_preview.py  process_psf.py  psf_E100keV_beam2.0nm_resist60nm_AluconeXPS_run001_beamer.txt  requirements.txt  run_gui.bat  simulation_summary.txt  test_dose_modeling.py  test_gui_integration.py  test_pattern_gui_minimal.py  update_paths.py  visualize_pattern_dose.py
scripts/gui/core/: __init__.py  config.py
scripts/gui/resources/: styles.qss
scripts/gui/widgets/: __init__.py  beam_widget.py  pattern_dose_visualizer.py  pattern_heatmap_widget.py  pattern_visualization_widget.py  plot_widget.py  proximity_correction_widget.py  proximity_study_widget.py
scripts/utils/: analyze_proximity_results.py
src/actions/: CMakeLists.txt  CMakeLists.txt.backup_20250612_161609
src/actions/include/: ActionInitialization.hh  EventAction.hh  OutputMessenger.hh  RunAction.hh  RunAction.hh.backup_20250610_052710  RunAction.hh.backup_20250612_161609  StackingAction.hh  SteppingAction.hh
src/actions/src/: ActionInitialization.cc  EventAction.cc  OutputMessenger.cc  RunAction.cc  RunAction.cc.backup_20250610_052710  RunAction.cc.backup_20250612_161609  StackingAction.cc  SteppingAction.cc  SteppingAction.cc.backup_20250610_052710
src/beam/: CMakeLists.txt
src/beam/include/: PatternGenerator.hh  PatternMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  SquarePatternGenerator.hh
src/beam/src/: PatternGenerator.cc  PatternMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  SquarePatternGenerator.cc
src/common/: CMakeLists.txt
src/common/include/: DataManager.hh  DataMessenger.hh  EBLConstants.hh  EBLTypes.hh  JEOLParameters.hh  VerbosityManager.hh
src/common/src/: DataManager.cc  DataMessenger.cc  VerbosityManager.cc
src/geometry/: CMakeLists.txt
src/geometry/include/: DetectorConstruction.hh  DetectorMessenger.hh
src/geometry/src/: DetectorConstruction.cc  DetectorMessenger.cc
src/physics/: CMakeLists.txt
src/physics/include/: PhysicsList.hh  PhysicsMessenger.hh
src/physics/src/: PhysicsList.cc  PhysicsMessenger.cc
tests/: CMakeLists.txt
